--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "Getting Started Example",
+  "name": "ObjectLand",
   "version": "1.0",
-  "description": "Build an Extension!",
+  "description": "ObjectLand helpers",
   "permissions": ["activeTab", "declarativeContent", "storage"],
   "options_page": "options.html",
   "background": {
@@ -9,7 +9,7 @@
     "persistent": false
   },
   "externally_connectable": {
-    "matches": ["https://objectlandschool.gkgoat.repl.co/","https://localhost:4000"]
+    "matches": ["https://objectlandschool.gkgoat.repl.co/"]
   },
   "content_scripts":[{"matches": ["https://*/*"],"js": ["jquery.js","jquery-ui.min.js","content.js"]}],
     "page_action": {
